test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-oknil-shared.chpl
//  lhs: unmanaged?  rhs: shared?  error: mm

class MyClass {  var x: int;  }

var lhs: unmanaged MyClass? = nil;
var rhs: shared MyClass?;

lhs = rhs;

compilerError("done");

