test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-oknil-shared.good
assign-oknil-unmanaged-from-oknil-shared.chpl:8: error: Cannot assign to unmanaged MyClass? from shared MyClass?
